support for BAM/BAI files from URL
git-svn-id: svn://svn.code.sf.net/p/genomeview/code/genomeview/trunk@564 6512a8d4-c03c-0410-a19d-ba0f7ff4f5ce